--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="hello_world">Hello world!</string>
 
     <string name="action_settings">Settings</string>
+    <string name="ns_menu_open">Menu Opened</string>
+    <string name="ns_menu_close">Menu closed</string>
+
 </resources>
